@@ -6,7 +6,7 @@ bp100:filtered-stage-move-tool=Filtered stage move tool
 [shortcut-name]
 bp100:cleanup-tool=Build cleanup tool
 bp100:stage-move-tool=Stage move tool
-bp100:filtered-stage-move-tool=Filtered stage move tool (experimental)
+bp100:filtered-stage-move-tool=Filtered stage move tool
 
 [entity-name]
 bp100:entity-marker=Blueprint entity marker
