@@ -1,6 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 0.11.0
 Date: ????
+  Features:
+    - Added a filtered stage move tool.
   Changes:
     - The stage move tool icon is now white.
 ---------------------------------------------------------------------------------------------------
